--- a/src/app/duelo/field-center/field-center.page.html
+++ b/src/app/duelo/field-center/field-center.page.html
@@ -2,13 +2,15 @@
     <ion-grid class="parametros">
         <ion-row class="parent-row">
             <ion-col size="12">
-                <div class="ion-text-center" (click)="callCalculadora('normal', 'j1')">
-                    <h1 class="textFormat">{{lifePoints1}}</h1>
+                <div class="ion-text-center" (click)="callCalculadora('j2')">
+                    <h2 class="fontJogador textOrientation">{{jogador2.jogador}}</h2>
+                    <h1 class="textFormat  textOrientation">{{jogador2.pontosDeVida}}</h1>
                 </div>
             </ion-col>
             <ion-col size="12">
-                <div class="ion-text-center" (click)="callCalculadora('invertido', 'j2')">
-                    <h1 class="textFormat textOrientation">{{lifePoints2}}</h1>
+                <div class="ion-text-center" (click)="callCalculadora('j1')">
+                    <h1 class="textFormat">{{jogador1.pontosDeVida}}</h1>
+                    <h2 class="fontJogador"> {{jogador1.jogador}}</h2>
                 </div>
             </ion-col>
         </ion-row>
