--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,20 @@
+ion-grid.center-grid {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) !important;
+        display: block !important;
+        width: 100%;
+        height: 50%;
+}
 
+ion-row.parent-row{
+    height: 50% !important;
+    //align-items: center !important;
+    justify-content: center !important;
+}
+
+ion-button{
+    height: 100%;
+    font-size: 150%
+}
