Added the buttons '() /2* /2'

--- a/src/app/duelo/calculadora/calculadora.page.html
+++ b/src/app/duelo/calculadora/calculadora.page.html
@@ -67,6 +67,18 @@
         <ion-button expand="full" size="large" (click)="apertarBotao('/')">/</ion-button>
       </ion-col>
       <ion-col size="3">
+        <ion-button expand="full" size="large" (click)="apertarBotao('/2')">/2</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button expand="full" size="large" (click)="apertarBotao('*2')">*2</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button expand="full" size="large" (click)="apertarBotao('(')">(</ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button expand="full" size="large" (click)="apertarBotao(')')">)</ion-button>
+      </ion-col>
+      <ion-col size="3">
         <ion-button expand="full" size="large" (click)="rebobinar()">MEM</ion-button>
       </ion-col>
       <ion-col size="3">
