--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
         <ion-button expand="block">Pesquisa</ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button expand="block">Banlist</ion-button>  
+        <ion-button expand="block" (click)="getDispositivo()">Banlist</ion-button>  
         <ion-button expand="block">Opções</ion-button>
       </ion-col>
     </ion-row>
