--- a/src/app/banlist/banlist.page.html
+++ b/src/app/banlist/banlist.page.html
@@ -6,6 +6,18 @@
 
 <ion-content>
   <ion-searchbar (ionInput)="searchBanCard($event)" placeholder="Digite o nome do card"></ion-searchbar>
+
+  <div *ngIf="selected != 'Pesquisa'">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor = "let option of options">
+        <ion-checkbox [(ngModel)]="option.checked" (ionChange)="sortCards(option.name, option.checked)"></ion-checkbox>
+        <ion-label>{{option.name}}</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
+
   <ion-row>
     <ion-col size="6">
       <h2>Nome</h2>
@@ -14,20 +26,73 @@
       <h2>Status</h2>
     </ion-col>
   </ion-row>
-  <ion-list *ngFor='let card of banlist | async'>
-    <ion-item button (click)="goToDetails(card.name)">
-    <ion-grid>
-      
-    <ion-row>
-      <ion-col size="6">
-        <h2>{{card.name}}</h2>
-      </ion-col>
-      <ion-col size="3">
-        <h4>{{card.banlist_info.ban_tcg}}</h4>
-      </ion-col>
-    </ion-row>
 
-  </ion-grid>
-</ion-item>
-  </ion-list>
+  <div *ngIf="selected === 'Pesquisa'">
+    <ion-list *ngFor='let card of searchCard'>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <h2>{{card.cardName}}</h2>
+            </ion-col>
+            <ion-col size="3">
+              <h4>{{card.cardStatus}}</h4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <div *ngIf="selected === 'Banidas' || selected === 'Todas'">
+    <ion-list  *ngFor='let card of banned'>
+      <ion-item >
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <h2>{{card.cardName}}</h2>
+            </ion-col>
+            <ion-col size="3">
+              <h4>{{card.cardStatus}}</h4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <div *ngIf="selected === 'Limitadas' || selected === 'Todas'">
+    <ion-list  *ngFor='let card of limited'>
+      <ion-item >
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <h2>{{card.cardName}}</h2>
+            </ion-col>
+            <ion-col size="3">
+              <h4>{{card.cardStatus}}</h4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
+  
+  <div *ngIf="selected === 'Semi-Limitadas' || selected === 'Todas'">
+    <ion-list  *ngFor='let card of semi'>
+      <ion-item >
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <h2>{{card.cardName}}</h2>
+            </ion-col>
+            <ion-col size="3">
+              <h4>{{card.cardStatus}}</h4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
+
 </ion-content>
