--- a/src/app/banlist/banlist.page.html
+++ b/src/app/banlist/banlist.page.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>banlist</ion-title>
+    <ion-row>
+      <ion-col size="3">
+          <ion-icon name="arrow-back" (click)="backToMenu()" class="icon-back"></ion-icon>
+      </ion-col>
+      <ion-col size="9">
+        <h3>Banlist</h3>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 
@@ -8,89 +15,94 @@
   <ion-searchbar (ionInput)="searchBanCard($event)" placeholder="Digite o nome do card"></ion-searchbar>
 
   <div *ngIf="selected != 'Pesquisa'">
-  <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor = "let option of options">
-        <ion-checkbox [(ngModel)]="option.checked" (ionChange)="sortCards(option.name, option.checked)"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="option.checked"></ion-checkbox>
         <ion-label>{{option.name}}</ion-label>
       </ion-col>
     </ion-row>
-  </ion-grid>
 </div>
 
   <ion-row>
-    <ion-col size="6">
+    <ion-col size="4">
+      <h2>Card</h2>
+    </ion-col>
+    <ion-col size="4">
       <h2>Nome</h2>
     </ion-col>
-    <ion-col size="3">
+    <ion-col size="4">
       <h2>Status</h2>
     </ion-col>
   </ion-row>
 
   <div *ngIf="selected === 'Pesquisa'">
     <ion-list *ngFor='let card of searchCard'>
-      <ion-item>
-        <ion-grid>
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
-            <ion-col size="6">
-              <h2>{{card.cardName}}</h2>
+            <ion-col size="4">
+              <img src={{card.imgPath}}>
             </ion-col>
-            <ion-col size="3">
-              <h4>{{card.cardStatus}}</h4>
+            <ion-col size="4">
+              <h6>{{card.cardName}}</h6>
+            </ion-col>
+            <ion-col size="4">
+              <h6>{{card.cardStatus}}</h6>
             </ion-col>
           </ion-row>
-        </ion-grid>
       </ion-item>
     </ion-list>
   </div>
 
-  <div *ngIf="selected === 'Banidas' || selected === 'Todas'">
+  <div *ngIf="options[1].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of banned'>
-      <ion-item >
-        <ion-grid>
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
-            <ion-col size="6">
-              <h2>{{card.cardName}}</h2>
+            <ion-col size="4">
+              <img src={{card.imgPath}}>
             </ion-col>
-            <ion-col size="3">
-              <h4>{{card.cardStatus}}</h4>
+            <ion-col size="4">
+              <h6>{{card.cardName}}</h6>
+            </ion-col>
+            <ion-col size="4">
+              <h6>{{card.cardStatus}}</h6>
             </ion-col>
           </ion-row>
-        </ion-grid>
       </ion-item>
     </ion-list>
   </div>
 
-  <div *ngIf="selected === 'Limitadas' || selected === 'Todas'">
+  <div *ngIf="options[2].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of limited'>
-      <ion-item >
-        <ion-grid>
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
-            <ion-col size="6">
-              <h2>{{card.cardName}}</h2>
+            <ion-col size="4">
+              <img src={{card.imgPath}}>
             </ion-col>
-            <ion-col size="3">
-              <h4>{{card.cardStatus}}</h4>
+            <ion-col size="4">
+              <h6>{{card.cardName}}</h6>
+            </ion-col>
+            <ion-col size="4">
+              <h6>{{card.cardStatus}}</h6>
             </ion-col>
           </ion-row>
-        </ion-grid>
       </ion-item>
     </ion-list>
   </div>
   
-  <div *ngIf="selected === 'Semi-Limitadas' || selected === 'Todas'">
+  <div *ngIf="options[3].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of semi'>
-      <ion-item >
-        <ion-grid>
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
-            <ion-col size="6">
-              <h2>{{card.cardName}}</h2>
+            <ion-col size="4" >
+              <img src={{card.imgPath}}>
             </ion-col>
-            <ion-col size="3">
-              <h4>{{card.cardStatus}}</h4>
+            <ion-col size="4">
+              <h6>{{card.cardName}}</h6>
+            </ion-col>
+            <ion-col size="4">
+              <h6>{{card.cardStatus}}</h6>
             </ion-col>
           </ion-row>
-        </ion-grid>
       </ion-item>
     </ion-list>
   </div>
