--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,8 +9,8 @@
       <ion-col size="6">
         <ion-button expand="block" (click)="openBanlist()"><ion-icon name="warning"></ion-icon>Banlist</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button expand="block"><ion-icon name="briefcase"></ion-icon>Cards</ion-button>
+      <ion-col size="6">
+        <ion-button expand="block" (click)="openCardList()"><ion-icon name="briefcase"></ion-icon>Cards</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
