--- a/src/app/banlist/banlist.page.html
+++ b/src/app/banlist/banlist.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-row>
-      <ion-col size="3">
+      <ion-col size="2">
           <ion-icon name="arrow-back" (click)="backToMenu()" class="icon-back"></ion-icon>
       </ion-col>
-      <ion-col size="9">
+      <ion-col size="10">
         <h3>Banlist</h3>
       </ion-col>
     </ion-row>
@@ -37,7 +37,7 @@
 
   <div *ngIf="isSearch">
     <ion-list *ngFor='let card of searchCard'>
-      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName, card.cardType)">
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
             <ion-col size="4">
               <img src={{card.imgPath}}>
