Fixed the bug on banlist page

--- a/src/app/banlist/banlist.page.html
+++ b/src/app/banlist/banlist.page.html
@@ -60,7 +60,7 @@
 
   <div *ngIf="options[1].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of banned'>
-      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName, card.cardType)">
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
             <ion-col size="4">
               <img src={{card.imgPath}}>
@@ -78,7 +78,7 @@
 
   <div *ngIf="options[2].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of limited'>
-      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName, card.cardType)">
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
             <ion-col size="4">
               <img src={{card.imgPath}}>
@@ -96,7 +96,7 @@
   
   <div *ngIf="options[3].checked === true || options[0].checked === true">
     <ion-list  *ngFor='let card of semi'>
-      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName, card.cardType)">
+      <ion-item class={{card.cardType}} button (click)="goToDetails(card.cardName)">
           <ion-row>
             <ion-col size="4" >
               <img src={{card.imgPath}}>
